fixed the z-index of my nav bar so it isn't covered when you highlight images

--- a/week12/styles/style.css
+++ b/week12/styles/style.css
@@ -125,6 +125,7 @@ h6 {
     justify-content: center;
     gap: 20%;
     position: sticky;
+    z-index: 1;
     top: 0;
   }
   .header-menu-button {
